deploy/base/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: blue
spec:
  parentRefs:
    - kind: Gateway
      name: http
      namespace: kube-system
  hostnames:
    - blue.dudo.dev
    - blue.marin.dev
  rules:
    - backendRefs:
        - name: blue
          port: 8080
